--- a/atvd02tecweb.html
+++ b/atvd02tecweb.html
@@ -43,10 +43,10 @@
         ° atributo lang na tag <small> <html> </small> <br>
     <hr>
     <h2 id="links"> Links Úteis</h2>
-
-
-
-        
+    <a href="https://github.com/lucas-lfm" target="_blank">GitHub Da Disciplina</a> </br>
+    <a href="https://codepen.io/" target="_blank">Codepen</a> </br>
+    <a href="https://www.w3schools.com/" target="_blank">w3schools</a> </br>
+    <a href="https://developer.mozilla.org/pt-BR/"target="_blank">MDN web docs</a> </br>      
     </body>
     </head>
 </html>
