--- a/atvd02tecweb.html
+++ b/atvd02tecweb.html
@@ -6,15 +6,15 @@
 </head>
 <body>
     <h1> PAULO HENRIQUE G. RODRIGUES</h1>
-    <h3> 🌐 Menu de navegação:</h3> <h2 id="apresentação"></h2> <p>
+    <h3> &#127760; Menu de navegação:</h3> <h2 id="apresentação"></h2> <p>
         <a href="#apresentacao">Apresentação</a> | <a href="#disciplina">Disciplinas</a> | <a href="#cont"> Conteúdo planejado</a> | <a href="#aprend">O que foi aprendido</a> | <a href="links"> Links Úteis</a>
     </p>
     <hr>
-    <h2 id="apresentacao"> Apresentação </h2>
+    <h2 id="apresentacao"> Apresentação &#129303; </h2>
     Olá, meu nome é Paulo Henrique, tenho 17 anos e sou aluno do curso de <i>Análise e desenvolvimento de sistemas</i> no <b> IFCE- <i>
         <br> campus Tauá.</i> </b> Estou no primeiro semestre do curso e meu objetivo é ao concuir o curso trabalhar como back-end. 
     <hr>
-    <h2 id="disciplina"> Disciplinas </h2>
+    <h2 id="disciplina"> Disciplinas &#128218; </h2>
     No momento estou cursando as seguintes disciplinas técnicas: <br>
    <mark> - Tecnologias Web <br> </mark>
     - Banco de DADOS <br>
@@ -24,14 +24,14 @@
     - Ingles tecnico <br>
     - Fundamentos de Matemática <br>
     <hr>
-    <h2 id="cont"> Conteúdo planejado para TWEB </h2>
+    <h2 id="cont"> Conteúdo planejado para TWEB &#127919;</h2>
     Essa é a sequência de conteúdos que vamos estudar para TWEB: <br>
     1.0 Introdução  á internet e WEB <br>
     2.0 <i>Hyper Text Markup Languagem</i>(HTML)<br>
     3.0 <i> Cascading style sheets</i> (CSS)  <br>
     4.0 <i>frameworks front-end </i> <br>
     <hr>
-    <h2 id="aprend"> O que aprendemos até aqui em TWEB</h2>
+    <h2 id="aprend"> O que aprendemos até aqui em TWEB	&#9989; </h2>
     Na disciplina de Tecnologias Web estudamos, as tecnologias web básicas relacionadas a desenvolvimento de interfaces de sites e <br>
     sistemas web. <br> 
      Até aqui estudamos os seguintes conceitos em HTML : <br>
@@ -42,7 +42,7 @@
         ° declaração <small> <!DOCTYPE html> </small> <br>
         ° atributo lang na tag <small> <html> </small> <br>
     <hr>
-    <h2 id="links"> Links Úteis</h2>
+    <h2 id="links"> Links Úteis &#128270; </h2>
     <a href="https://github.com/lucas-lfm" target="_blank">GitHub Da Disciplina</a> </br>
     <a href="https://codepen.io/" target="_blank">Codepen</a> </br>
     <a href="https://www.w3schools.com/" target="_blank">w3schools</a> </br>
@@ -50,9 +50,3 @@
     </body>
     </head>
 </html>
-    
-
-
-       
-
-
